2433 [AVS Script Creator] fixed "TDeint (with EDI)" (regression of 2305)
2432 [Update] fixed DGIndexNV, NeroAACenc, QAAC and x265 update handling (regression of 2431)
2431 [Update] optional packages will only be downloaded/enabled if needed
              therefore during first use of such packages an online connection may be required
              if a package is not used in 60 days it will be disabled again
              currently the following packages are disabled by default (more to come):
              DGIndexNV, FFmpeg, MKVMerge, NeroAACenc, QAAC, x264, x264_10b, x265
              DGIndexNV, NeroAACenc, QAAC and x265 still need to be enabled in the MeGUI settings
              NeroAACenc, QAAC and x265 need a restart of MeGUI so that the presets are enabled
2430 [OneClick] fixed unnecessary resize/crop in some cases (regression of 2357)
2429 [Update] version/date information will be shown also for disabled packages
2428 [Update] disabled packages are not hidden anymore
2427 [Update] hide x264 10bit completly if disabled (regression of 2395)
2426 [x265] added option to enable/disable x265 in the MeGUI settings (disabled by default)
2425 [Queue] fixed crash if more than one worker is opening an avs script
2424 [x265] fixed default encoding mode part II
2423 [x265] fixed default encoding mode
2422 [x265] added basic x265 encoding support
2421 [Log] do not log progress messages from the FFmpeg encoder
2420 delete devil.dll in the MeGUI root folder if avisynth.dll is not available also
2419 [Update] added possibility to use display names for the update files
              added possibility to use .NET requirements for the update files
              improved error handling and log output

Changelog 2356 --> 2418

Features/Changes:
[x264] added 10 bit encoding support. This must be enabled through the MeGUI settings if you want to use it.
[x264] disabled direct mp4 output as the official builds do not have this support enabled anymore.